--- a/css/main.css
+++ b/css/main.css
@@ -7,27 +7,56 @@
 }
 
 :root {
-    --bg-color: rgb(150 50 150);
-    --bg-color-dark: rgb(70, 50, 70);
-    --font-color: white;
-    --input-color: rgb(185, 138, 143);
+    --bg-color: rgb(128, 69, 206);
+    --bg-color-dark: rgb(78, 52, 114);
+    --font-color: rgb(255, 255, 255);
+    --input-color: rgb(187, 159, 219);
+}
+
+body {
+    background: var(--bg-color);
+    font: bold 2rem 'Open Sans';
 }
 
 .container {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    width: 50vw;
     flex-direction: column;
-    background: var(--bg-color);
-    max-width: 90%;
+    align-items: center;
     margin: 0 auto;
 }
 
-#entrada input {
-    margin-top: 20px;
-    padding: 30px;
-    width: 500px;
-    height: 10px;
+.todoList {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.novoItem {
+    display: flex;
+    width: 100%;
+    height: 50px;
+    justify-content: space-between;
+    align-items: center;
+    padding: 5px;
+    box-shadow: 1px 1px 5px var(--bg-color-dark);
+}
+
+.novoItem > section {
+    width: 80%;
+}
+
+.novoItem:hover {
+    cursor: pointer;
+    transition: all ease .2s;
+    background: var(--bg-color-dark);
+    color: var(--font-color);
+}
+
+.novoItem > input[type="text"] {
+    border: none;
+    width: 80%;
+    font: inherit;
     background: var(--input-color);
-    font-size: 30px;
 }
