--- a/css/main.css
+++ b/css/main.css
@@ -1,62 +1,135 @@
+/* Define as variáveis para manipulação das cores e fontes*/
+:root {
+    --primary-color: rgb(139, 87, 207);
+    --secondary-color: rgb(93, 64, 133);
+    --tertiary-color: rgb(187, 159, 219);
+    --color-font: rgb(255, 255, 255);
+}
+
+/* Reset das configurações dos navegadores*/
 * {
     margin: 0;
     padding: 0;
     outline: 0;
     box-sizing: border-box;
-    text-rendering: optimizeLegibility;
 }
 
-:root {
-    --bg-color: rgb(128, 69, 206);
-    --bg-color-dark: rgb(78, 52, 114);
-    --font-color: rgb(255, 255, 255);
-    --input-color: rgb(187, 159, 219);
+/* Ajusta o tamanho do rem (unidade base)
+   1 rem = 16px / 62,5% equivale a 10px*/
+html {
+    font-size: 62.5%;
 }
 
+/* Seta o backgorund da página e define o tipo de fonte*/
 body {
-    background: var(--bg-color);
-    font: bold 2rem 'Open Sans';
+    background-color: var(--primary-color);
+    font: bold 2rem 'Open Sans', sans-serif;
+    overflow-x: hidden;
 }
 
+/* Define o container da página*/
 .container {
     display: flex;
     width: 50vw;
     flex-direction: column;
     align-items: center;
     margin: 0 auto;
+    gap: 15px;
 }
 
-.todoList {
+/* Define as configurações do título*/
+.todo_title {
+    display: flex;
+    background-color: var(--secondary-color);
+    width: 100%;
+    height: 80px;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+    box-shadow: 1px 1px 5px var(--secondary-color);
+    font-size: 3rem;
+    color: var(--color-font);
+}
+
+/* Configura a seção que gera a lista de tarefas*/
+.todo_list {
     display: flex;
     width: 100%;
     flex-direction: column;
     gap: 10px;
 }
 
-.novoItem {
+/* Define as configurações dos itens da lista*/
+.todo_item{
     display: flex;
     width: 100%;
-    height: 50px;
+    height: 60px;
     justify-content: space-between;
     align-items: center;
     padding: 5px;
-    box-shadow: 1px 1px 5px var(--bg-color-dark);
+    box-shadow: 1px 1px 5px var(--secondary-color);
 }
 
-.novoItem > section {
+.todo_item > section {
     width: 80%;
 }
 
-.novoItem:hover {
+.todo_item:hover {
     cursor: pointer;
-    transition: all ease .2s;
-    background: var(--bg-color-dark);
-    color: var(--font-color);
+    transition: all .5s ease;
+    background-color: var(--secondary-color);
+    color: var(--color-font);
 }
 
-.novoItem > input[type="text"] {
+.todo_item > input[type='text'] {
     border: none;
     width: 80%;
     font: inherit;
-    background: var(--input-color);
+}
+
+.todo_item > input[type='button'],
+.todo_item > input[type='checkbox'] {
+    width: 30px;
+    height: 30px;
+    font: inherit;
+}
+
+.todo_item > input[type='checkbox']:checked  + div {
+    text-decoration:line-through;
+}
+
+.todo_new-item{
+    display: flex;
+    background-color: var(--tertiary-color);
+    width: 100%;
+    height: 70px;
+    justify-content: space-evenly;
+    padding: 10px 0;
+    box-shadow: 1px 1px 5px var(--secondary-color);
+    margin: 10px;
+    font: inherit;
+}
+
+.todo_new-item > input{
+    background-color: var(--tertiary-color);
+    border: none;
+    width: 80%;
+    outline: none;
+    font: inherit;
+}
+
+.todo_new-item > input::placeholder {
+    font-style: italic;
+    font-weight: normal;
+}
+
+footer {
+    background-color: var(--secondary-color);
+    position: relative;
+    height: 50px;   
+    bottom: 0;
+    width: 100vw;
+    color: var(--color-font);
+    text-align: center;
+    padding-top: 10px;
 }
